เพิ่ม Curriculum และอัพเดท Swagger UI
